Use Ben's legal name.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 The primary authors of mock-duck are:
 
   * Jon Chappell <jon@jchome.us>
-  * Ben Gruver <nebonrevurg@gmail.com>
+  * John Gruver <nebonrevurg@gmail.com>
   * Luke Sneeringer <lukesneeringer@google.com>
